Update to 8u131 and enable CGroup constraint