@@ -1,3 +1,7 @@
 #!/bin/sh
 
+if [ -z "$JAVA_OPTS" ]; then
+  JAVA_OPTS="-XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -XX:MaxRAMFraction=1 -XX:UseG1GC"
+fi
+
 java $JAVA_OPTS $*
